--- a/RD3/Lang/Lang.zh-CN.xaml
+++ b/RD3/Lang/Lang.zh-CN.xaml
@@ -9,8 +9,8 @@
     <system:String x:Key="Control">过程控制</system:String>
     <system:String x:Key="Setting">系统设置</system:String>
     <system:String x:Key="Debug">调试</system:String>
-    <system:String x:Key="Details">详情</system:String>
-    <system:String x:Key="Trends">曲线</system:String>
+    <system:String x:Key="Detail">详情</system:String>
+    <system:String x:Key="Trend">曲线</system:String>
     <system:String x:Key="Overview">总览</system:String>
     <system:String x:Key="Running">运行中</system:String>
     <system:String x:Key="ReactorName">反应器名称</system:String>
@@ -101,4 +101,11 @@
     <system:String x:Key="Device">设备</system:String>
     <system:String x:Key="Liquid">加液</system:String>
     <system:String x:Key="Harvest">收获</system:String>
+    <system:String x:Key="ExportMustSelectSomething">未选中数据！</system:String>
+    <system:String x:Key="Occurrence Time">发生时间</system:String>
+    <system:String x:Key="Module">模块</system:String>
+    <system:String x:Key="Save as template">另存为模板</system:String>
+    <system:String x:Key="Audit">审计追踪</system:String>
+    <system:String x:Key=" Do as unscheduled action">增加记录</system:String>
+    <system:String x:Key="Add Liquid">加液</system:String>
 </ResourceDictionary>
