--- a/RD3/Views/AuditView.xaml
+++ b/RD3/Views/AuditView.xaml
@@ -81,10 +81,12 @@
                         hc:InfoElement.Placeholder="{ex:Language Key='End time'}"
                         hc:InfoElement.ShowClearButton="True" />
                     <Button
+                        Name="BtnExport"
                         Height="35"
                         HorizontalContentAlignment="Center"
                         hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                         hc:IconElement.Geometry="{StaticResource GeometryExport}"
+                        Command="{Binding ExportCommand}"
                         Content="{ex:Language Key='Export'}"
                         FontSize="14" />
                 </hc:UniformSpacingPanel>
@@ -96,7 +98,7 @@
             Margin="0,10,0,10"
             BorderThickness="0"
             Loaded="TabControl_Loaded">
-            <TabItem Name="tabAction" IsSelected="True">
+            <TabItem Name="tabAction">
                 <DataGrid
                     Name="dataGrid"
                     hc:DataGridAttach.CanUnselectAllWithBlankArea="True"
