--- a/RD3/Views/CommunicationView.xaml
+++ b/RD3/Views/CommunicationView.xaml
@@ -16,7 +16,7 @@
     d:DataContext="{d:DesignInstance Type=viewmodels:CommunicationViewModel}"
     Background="{StaticResource BackGroundBrush}"
     FontFamily="{StaticResource ENGFontFamily}"
-    TextElement.FontSize="14"
+    TextElement.FontSize="{DynamicResource NormalFontSize}"
     TextElement.FontWeight="Regular"
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     TextOptions.TextFormattingMode="Ideal"
@@ -72,7 +72,7 @@
                 hc:DataGridAttach.ShowSelectAllButton="False"
                 AutoGenerateColumns="False"
                 Background="Transparent"
-                FontSize="14"
+                FontSize="{DynamicResource NormalFontSize}"
                 HeadersVisibility="Column"
                 IsReadOnly="True"
                 ItemsSource="{Binding ClientCol}"
