--- a/RD3/Views/EditProjectView.xaml
+++ b/RD3/Views/EditProjectView.xaml
@@ -101,7 +101,7 @@
                     BorderBrush="{StaticResource PrimaryBrush}"
                     Command="{Binding CancelCommand}"
                     Content="{ex:Language Key='Cancel'}"
-                    FontSize="14"
+                    FontSize="{DynamicResource NormalFontSize}"
                     Foreground="{StaticResource PrimaryBrush}" />
                 <Button
                     Width="80"
@@ -114,7 +114,7 @@
                     BorderBrush="{StaticResource PrimaryBrush}"
                     Command="{Binding OKCommand}"
                     Content="{ex:Language Key='OK'}"
-                    FontSize="14"
+                    FontSize="{DynamicResource NormalFontSize}"
                     Foreground="White"
                     Visibility="{Binding Enable, Converter={StaticResource BooleanToVisibilityConverter}}" />
             </StackPanel>
