--- a/RD3/Views/EditTemplateView.xaml
+++ b/RD3/Views/EditTemplateView.xaml
@@ -521,7 +521,7 @@
                             BorderBrush="{StaticResource PrimaryBrush}"
                             Command="{Binding CancelCommand}"
                             Content="{ex:Language Key='Cancel'}"
-                            FontSize="14"
+                            FontSize="{DynamicResource NormalFontSize}"
                             Foreground="{StaticResource PrimaryBrush}" />
                         <Button
                             Width="140"
@@ -534,7 +534,7 @@
                             BorderBrush="{StaticResource PrimaryBrush}"
                             Command="{Binding OKCommand}"
                             Content="{ex:Language Key='Save as template'}"
-                            FontSize="14"
+                            FontSize="{DynamicResource NormalFontSize}"
                             Foreground="White"
                             Visibility="{Binding Enable, Converter={StaticResource BooleanToVisibilityConverter}}" />
                     </hc:UniformSpacingPanel>
