--- a/RD3/Views/EditUserView.xaml
+++ b/RD3/Views/EditUserView.xaml
@@ -105,7 +105,7 @@
                     BorderBrush="{StaticResource PrimaryBrush}"
                     Command="{Binding CancelCommand}"
                     Content="{ex:Language Key='Cancel'}"
-                    FontSize="14"
+                    FontSize="{DynamicResource NormalFontSize}"
                     Foreground="{StaticResource PrimaryBrush}" />
                 <Button
                     Width="80"
@@ -118,7 +118,7 @@
                     BorderBrush="{StaticResource PrimaryBrush}"
                     Click="Button_Click"
                     Content="{ex:Language Key='OK'}"
-                    FontSize="14"
+                    FontSize="{DynamicResource NormalFontSize}"
                     Foreground="White"
                     Visibility="{Binding Enable, Converter={StaticResource BooleanToVisibilityConverter}}" />
             </StackPanel>
