--- a/RD3/Views/AddSampleView.xaml
+++ b/RD3/Views/AddSampleView.xaml
@@ -118,7 +118,7 @@
                         BorderBrush="{StaticResource PrimaryBrush}"
                         Command="{Binding CancelCommand}"
                         Content="{ex:Language Key='Cancel'}"
-                        FontSize="14"
+                        FontSize="{DynamicResource NormalFontSize}"
                         Foreground="{StaticResource PrimaryBrush}" />
                     <Button
                         Width="80"
@@ -127,7 +127,7 @@
                         Background="{StaticResource PrimaryBrush}"
                         BorderBrush="{StaticResource PrimaryBrush}"
                         Content="{ex:Language Key='OK'}"
-                        FontSize="14"
+                        FontSize="{DynamicResource NormalFontSize}"
                         Foreground="White" />
                 </hc:UniformSpacingPanel>
             </Grid>
