--- a/RD3/Views/BatchView.xaml
+++ b/RD3/Views/BatchView.xaml
@@ -15,7 +15,7 @@
     d:DesignWidth="1350"
     Background="{StaticResource BackGroundBrush}"
     FontFamily="{StaticResource ENGFontFamily}"
-    TextElement.FontSize="14"
+    TextElement.FontSize="{DynamicResource NormalFontSize}"
     TextElement.FontWeight="Regular"
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     TextOptions.TextFormattingMode="Ideal"
@@ -88,7 +88,7 @@
                         BorderBrush="{StaticResource PrimaryBrush}"
                         Click="ButtonAdd_Click"
                         Content="{ex:Language Key='Create'}"
-                        FontSize="14"
+                        FontSize="{DynamicResource NormalFontSize}"
                         Foreground="White" />
                     <Button
                         Name="ButtonCompare"
@@ -97,14 +97,15 @@
                         hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                         hc:IconElement.Geometry="{StaticResource GeometryCompare}"
                         Content="{ex:Language Key='Compare'}"
-                        FontSize="14" />
+                        FontSize="{DynamicResource NormalFontSize}" />
                     <Button
                         Height="35"
                         HorizontalContentAlignment="Center"
                         hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                         hc:IconElement.Geometry="{StaticResource GeometryExport}"
                         Content="{ex:Language Key='Export'}"
-                        FontSize="14" />
+                        FontSize="{DynamicResource NormalFontSize}"
+                        />
                     <Button
                         Height="35"
                         HorizontalContentAlignment="Center"
@@ -112,7 +113,7 @@
                         hc:IconElement.Geometry="{StaticResource GeometryDelete}"
                         Command="{Binding DeleteCommand}"
                         CommandParameter="{Binding ElementName=dataGrid, Path=SelectedItem}"
-                        FontSize="14"
+                        FontSize="{DynamicResource NormalFontSize}"
                         Foreground="Red"
                         Visibility="Collapsed" />
                 </hc:UniformSpacingPanel>
@@ -133,7 +134,7 @@
                     AutoGenerateColumns="False"
                     Background="Transparent"
                     ColumnWidth="SizeToCells"
-                    FontSize="14"
+                    FontSize="{DynamicResource NormalFontSize}"
                     FrozenColumnCount="2"
                     HeadersVisibility="Column"
                     IsReadOnly="True"
@@ -266,7 +267,7 @@
                     Background="Transparent"
                     CanUserSortColumns="False"
                     ColumnWidth="SizeToCells"
-                    FontSize="14"
+                    FontSize="{DynamicResource NormalFontSize}"
                     HeadersVisibility="Column"
                     IsReadOnly="True"
                     ItemsSource="{Binding ProjectTemplateCol}"
