--- a/RD3/Views/EditSampleView.xaml
+++ b/RD3/Views/EditSampleView.xaml
@@ -127,7 +127,7 @@
                 hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                 BorderBrush="{StaticResource PrimaryBrush}"
                 Content="{ex:Language Key='Cancel'}"
-                FontSize="14"
+                FontSize="{DynamicResource NormalFontSize}"
                 Foreground="{StaticResource PrimaryBrush}" />
             <Button
                 Width="80"
@@ -139,7 +139,7 @@
                 Background="{StaticResource PrimaryBrush}"
                 BorderBrush="{StaticResource PrimaryBrush}"
                 Content="{ex:Language Key='OK'}"
-                FontSize="14"
+                FontSize="{DynamicResource NormalFontSize}"
                 Foreground="White"
                 Visibility="{Binding Enable, Converter={StaticResource BooleanToVisibilityConverter}}" />
         </StackPanel>
