--- a/RD3/Views/OperationView.xaml
+++ b/RD3/Views/OperationView.xaml
@@ -15,7 +15,7 @@
     d:DesignWidth="1350"
     Background="{StaticResource BackGroundBrush}"
     FontFamily="{StaticResource ENGFontFamily}"
-    TextElement.FontSize="14"
+    TextElement.FontSize="{DynamicResource NormalFontSize}"
     TextElement.FontWeight="Regular"
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     TextOptions.TextFormattingMode="Ideal"
@@ -77,7 +77,7 @@
                 hc:IconElement.Geometry="{StaticResource GeometryFilter}"
                 Click="ButtonSearch_Click"
                 Content="{ex:Language Key='Filters'}"
-                FontSize="14" />
+                FontSize="{DynamicResource NormalFontSize}" />
             <Button
                 Grid.Column="4"
                 Height="30"
@@ -86,7 +86,7 @@
                 hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                 hc:IconElement.Geometry="{StaticResource GeometryExport}"
                 Content="{ex:Language Key='Export'}"
-                FontSize="14" />
+                FontSize="{DynamicResource NormalFontSize}" />
         </Grid>
         <DataGrid
             Grid.Row="2"
@@ -95,7 +95,7 @@
             AutoGenerateColumns="False"
             Background="Transparent"
             ColumnWidth="SizeToCells"
-            FontSize="14"
+            FontSize="{DynamicResource NormalFontSize}"
             HeadersVisibility="Column"
             IsReadOnly="True"
             ItemsSource="{Binding OperationCol}"
