--- a/RD3/Views/UserView.xaml
+++ b/RD3/Views/UserView.xaml
@@ -136,7 +136,7 @@
                     AutoGenerateColumns="False"
                     Background="Transparent"
                     ColumnWidth="SizeToCells"
-                    FontSize="14"
+                    FontSize="{DynamicResource NormalFontSize}"
                     HeadersVisibility="Column"
                     IsReadOnly="True"
                     ItemsSource="{Binding UserCol}"
